# NBA_project

./: LICENSE  README.md  pyproject.toml  setup.py
docs/: conf.py
models/: adaboost_default.joblib  adaboost_hyperparameters.joblib  log_reg_default.joblib  svc_default.joblib
notebooks/: (noMark)week_2_best_models_artefacts.ipynb  EDA.ipynb  Experiment_1.ipynb  Experiment_2.ipynb  Experiment_3.ipynb  Hoang_TrungKien_14234710_week1_PolynomialLogisticRegression.ipynb  Hoang_TrungKien_14234710_week2_adaboost.ipynb  Hoang_TrungKien_14234710_week3_adaboost-hyperparameters.ipynb
src/data/: sets.py
src/models/: baseline.py  predict_model.py  train_model.py
